# dissmodel

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  readme.md  requirements.txt  setup.py  sitemap.xml
.github/workflows/: python-publish.yml
core/: index.html
dissmodel/: __init__.py
dissmodel/core/: __init__.py  environment.py  model.py  spatial.py
dissmodel/geo/: __init__.py  celular_automaton.py  fill.py  neihborhood.py  regular_grid.py
dissmodel/publish/: dataworld.py
dissmodel/visualization/: __init__.py  chart.py  map.py  streamlit.py
docs/: core.md  index.md
docs/examples/: fire_model.md  fire_prob_streamlit.py  fire_streamlit.py  game_of_life.md  game_of_life.py  game_of_life_ex1.py  game_of_life_streamlit.py  game_of_life_streamlit_random.py  population_streamlit.py  sir.py  sir_chart.py  sir_streamlit.py  temperature_streamlit.py
docs/modules/: core.md  geo.md  visualization.md
docs/uml/: core.md  geo.md  models_ca.md  models_sysdyn.md  overview.md  visualization.md
examples/CA/: index.html
examples/basic/: fill_ex1.py  teste_core.py
examples/ca/: index.html
examples/data/: README.md
examples/fire_model/: index.html
examples/game_of_life/: index.html
examples/gis/: elevacao_simples.py  load_shapefile.py
images/uml/: classes_Core.puml  packages_CAModels.puml  packages_GeoClasses.puml  packages_SysDynModels.puml
modules/: index.html
modules/core/: index.html
modules/geo/: index.html
modules/visualization/: index.html
search/: search_index.json
tests/: dw_test.py
uml/core/: index.html
uml/geo/: index.html
uml/models_ca/: index.html
uml/models_sysdyn/: index.html
uml/overview/: index.html
uml/visualization/: index.html
(+67 files in other folders)
