[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dissmodel"
version = "0.1.2"
description = "dissmodel - Discrete Spatial Modeling"
readme = "README.md"
readme-content-type = "text/markdown"
license = {text = "MIT"}
authors = [
    { name = "Sérgio Costa, Nerval Santos Junior" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.25.0",
    "datadotworld==2.0.0",
    "dotenv==0.9.9",
    "geopandas==1.0.1",
    "pysal==25.1",
    "streamlit==1.45.1",
    "salabim==25.0.9.post4"
]

classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/LambdaGeo/dissmodel"
"Bug Tracker" = "https://github.com/LambdaGeo/dissmodel/issues"
