[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dissmodel"
version = "0.1.4"
description = "dissmodel - Discrete Spatial Modeling"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Sérgio Costa" },
    { name = "Nerval Santos Junior" }
]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.25.0",
    "datadotworld==2.0.0",
    "dotenv==0.9.9",
    "geopandas==1.0.1",
    "pysal==25.1",
    "streamlit==1.45.1",
    "salabim==25.0.9.post4",
]
requires-python = ">=3.8"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"dissmodel" = ["*.json", "*.csv", "*.shp", "*.geojson", "*.tif"]
